// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatar /> renders correctly 1`] = `
<UserAvatar__UserAvatarContainer
  className="mr-10"
  hasBadge={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <img
    alt="toto"
    className="img-circle object-cover user-avatar mr-10 mr-10"
    src="http://media12/profileAvatar.jpg"
    style={
      Object {
        "height": "16px",
        "width": "16px",
      }
    }
  />
</UserAvatar__UserAvatarContainer>
`;

exports[`<UserAvatar /> renders correctly user without avatar 1`] = `
<UserAvatar__UserAvatarContainer
  className=""
  hasBadge={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <DefaultAvatar
    className="img-circle avatar user-avatar mr-10 "
    size={16}
  />
</UserAvatar__UserAvatarContainer>
`;

exports[`<UserAvatar /> renders correctly with custom default avatar 1`] = `
<UserAvatar__UserAvatarContainer
  className=""
  hasBadge={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <img
    alt="toto"
    className="img-circle object-cover user-avatar mr-10 "
    src="http://avatar/customAvatar.jpg"
    style={
      Object {
        "height": "16px",
        "width": "16px",
      }
    }
  />
</UserAvatar__UserAvatarContainer>
`;

exports[`<UserAvatar /> renders correctly with default avatar needed 1`] = `
<UserAvatar__UserAvatarContainer
  className="mr-10"
  hasBadge={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <DefaultAvatar
    className="img-circle avatar user-avatar mr-10 mr-10"
    size={16}
  />
</UserAvatar__UserAvatarContainer>
`;
